--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -1126,3 +1126,4 @@ train.choose.folder = Wählen sie einen Ordner aus
 train.chooser.title = jDownloader - Train All
 train.method = Wählen Sie eine Methode aus:
 wrapper.webupdate.updatefile = Plugin %s aktualisieren
+plugin.rapidshare.error.serverunavailable = Der Server %s ist momentan nicht verfügbar.
