--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -4,7 +4,6 @@ addons.jdgrowlnotification.menu = Growl Benachrichtigungen
 addons.jdlowspeed.statusmessage.disabled = Low Speederkennung ausschalten
 addons.jdlowspeed.statusmessage.enabled = Low Speederkennung einschalten
 addons.jdshutdown.menu = Nach dem Downloaden herunterfahren
-addons.jdshutdown.run = System jetzt herunterfahren
 addons.jdshutdown.statusmessage.disabled = Das System wird nach dem Download NICHT heruntergefahren.
 addons.jdshutdown.statusmessage.enabled = Das System wird nach dem Download heruntergefahren.
 addons.schedule.menu.add = Hinzufügen
@@ -42,7 +41,10 @@ controller.status.fileexists.skip = Datei schon vorhanden
 controller.status.pluindefekt = Plugin defekt
 controller.status.tempunavailable = kurzzeitig nicht verfügbar
 convert.dialog.chooseformat = Wähle das Dateiformat:
+convert.dialog.forcekeep = Beibehalten erzwingen
 convert.dialog.keepformat = Format für diese Sitzung beibehalten
+convert.dialog.staykeepingformat = Formate weiterhin beibehalten
+convert.dialog.toppriority = Diese Auswahl vorherigen immer vorziehen
 convert.progress.convertingto = Konvertiere zu
 convert.progress.unknownintype = Unbekanntes Format
 decrypter.invalidaccount = Kein gültiger Account gefunden
@@ -170,7 +172,9 @@ gui.config.fengshui.rdmanual = Manuell
 gui.config.fengshui.rdname = Router-Erkennung
 gui.config.fengshui.settings = Einstellungen
 gui.config.fengshui.title = Feng-Shui-Konfiguration
+gui.config.general.changelog.auto = Öffne ChangeLog nach dem Update
 gui.config.general.createsubfolders = Wenn möglich Unterordner mit Paketname erstellen
+gui.config.general.createsubfoldersbefore = Erstelle Unterordner nach dem Hinzufügen von Links
 gui.config.general.downloaddirectory = Downloadverzeichnis
 gui.config.general.filelogger = Erstelle Logdatei im ./logs/ Ordner
 gui.config.general.loggerlevel = Level für's Logging
@@ -231,11 +235,10 @@ gui.config.liveheader.selectrouter = Router auswählen
 gui.config.liveheader.user = Login User (->%%%user%%%)
 gui.config.liveheader.waitforip = Auf neue IP warten [sek]
 gui.config.liveheader.waittimeforipcheck = Wartezeit bis zum ersten IP-Check [sek]
+gui.config.liveheader.warning.experimental = Möchten sie experimentelle Reconnectmethoden testen?\r\nExperimentelle Reconnectmethoden sind nicht so zuverlässig\r\nund beeinflussen möglicherweise die Routereinstellungen
 gui.config.liveheader.warning.nocurlconvert = jDownloader konnte dieses CURL Script nicht konvertieren.
 gui.config.liveheader.warning.notfound = jDownloader konnte ihre Routereinstellung nicht automatisch ermitteln.
-gui.config.liveheader.warning.wizard = Die automatische Suche nach den Einstellungen kann einige Minuten in Anspruch nehmen. Bitte geben Sie vorher Ihre Router Logindaten ein. Jetzt ausführen?
-gui.config.liveheader.warning.wizard.checkall = Alle Router prüfen (dauert sehr lange)
-gui.config.liveheader.warning.wizard.title = Routererkennung jetzt starten?
+gui.config.liveheader.warning.upnpinactive = Bitte aktivieren sie fals vorhanden Upnp in den Netzwerkeinstellungen ihres Routers <br><a href=\"http://%s\">zum Router</a><br><a href=\"http://wiki.jdownloader.org/index.php?title=Router_Upnp\">Wikiartikel: Upnp Routern</a><br>drücken sie Ok wenn sie Upnp aktiviert haben oder abbrechen wenn sie fortfahren wollen!
 gui.config.liveheader.warning.yourrouter = Sie haben eine
 gui.config.packagemanager.column_category = Kategorie
 gui.config.packagemanager.column_info = Info.
@@ -316,6 +319,7 @@ gui.downloadlink.errorpostprocess = [fehlgeschlagen] %s
 gui.downloadlink.errorpostprocess2 = [Konvertierung fehlgeschlagen]
 gui.downloadlink.finished = [fertig]
 gui.downloadlink.hosterwaittime = [Warte auf neue IP]
+gui.downloadlink.plugindisabled = [Plugin deaktiviert]
 gui.downloadlink.status.wait = %s min warten
 gui.downloadlist.delete = Ausgewählte Links wirklich entfernen?
 gui.downloadlist.delete_downloadlinks = Entferne abgeschlosse Downloads?
@@ -401,10 +405,12 @@ gui.linkinfo.download.activated = ist aktiviert
 gui.linkinfo.download.deactivated = ist deaktiviert
 gui.linkinfo.download.notunderway = ist nicht in Bearbeitung
 gui.linkinfo.download.underway = ist in Bearbeitung
+gui.linkinfo.downloadstatus = Download Status
 gui.linkinfo.file = Datei
 gui.linkinfo.filesize = Dateigröße
 gui.linkinfo.package = Paket
 gui.linkinfo.password = Passwort
+gui.linkinfo.pwdl = Passwort für Download
 gui.linkinfo.rate = Aktualisierungsrate
 gui.linkinfo.saveto = Speichern in
 gui.linkinfo.speed = Geschwindigkeit
@@ -412,6 +418,7 @@ gui.linkinfo.title = Link Information:
 gui.linkinfo.waittime = Wartezeit
 gui.linklist.editpackagename.message = Neuer Paketname
 gui.linklist.newpackage.message = Name des neuen Pakets
+gui.linklist.setpw.message = Download Passwort setzen
 gui.linklist.status.doresume = Warte auf Fortsetzung
 gui.logdialog.btn_uploadlog = Upload Log
 gui.logdialog.loglink = Loglink (OK um im Browser zu öffnen)
@@ -556,6 +563,7 @@ gui.splash.text.loadgui = Lade Benutzeroberfläche
 gui.splash.text.loadlanguage = Lade Sprachen
 gui.splash.text.loadplugins = Lade Plugins
 gui.splash.text.webupdate = Prüfe auf Updates
+gui.statusbar.interaction = Interaktion:
 gui.statusbar.premium = Premium
 gui.statusbar.sim_ownloads = Max.Dls.
 gui.statusbar.speed = Geschw.
@@ -577,8 +585,10 @@ gui.table.contextmenu.info = Detailansicht
 gui.table.contextmenu.newpackage = In neues Paket verschieben
 gui.table.contextmenu.packagesort = Paket sortieren
 gui.table.contextmenu.packagesubmenu = Paket
+gui.table.contextmenu.priority = Priorität
 gui.table.contextmenu.reset = zurücksetzen
 gui.table.contextmenu.resume = fortsetzen
+gui.table.contextmenu.setdlpw = Download Passwort setzen
 gui.table.draganddrop.after = Nach '%s' ablegen
 gui.table.draganddrop.before = Vor '%s' ablegen
 gui.table.draganddrop.insertinpackageend = In Paket '%s' am Ende einfügen
@@ -595,6 +605,7 @@ gui.textcomponent.context.paste = Einfügen
 gui.textcomponent.context.paste.acc = ctrl V
 gui.textcomponent.context.selectall = Alles auswählen
 gui.textcomponent.context.selectall.acc = ctrl A
+gui.titleaddaction = Aktion:
 gui.tooltip.statusbar.premium = Aus/An schalten des Premiumdownloads
 gui.tooltip.statusbar.simultan_downloads = Max. gleichzeitige Downloads
 gui.tooltip.statusbar.speedlimiter = Geschwindigkeitsbegrenzung festlegen (kb/s)
@@ -748,7 +759,6 @@ main.start.logwarning.body = ACHTUNG. Das Loglevel steht auf %s und der Dateisch
 main.start.logwarning.title = Logwarnung
 main.status.active = an
 main.status.inactive = aus
-main.twitter.url = http://twitter.com/statuses/user_timeline/jdownloader.xml
 main.urls.faq = http://jdownloader.org/faq.php?lng=deutsch
 modules.packagemanager.downloadednewpackage.title2 = <p>Updates geladen.Ein Neustart ist nötig<br/> JDownloader jetzt neu starten?<hr>%s</p>
 modules.packagemanager.packagename = JD-Update
@@ -761,7 +771,9 @@ modules.reconnect.types.extern = Extern
 modules.reconnect.types.liveheader = LiveHeader/Curl
 plugin.optional.jdchat.teamviewer.yourtvdata = Deine Teamviewer Daten:
 plugin.rapidshare.error.accountnotfound = Premium Account wurde nicht gefunden.
+plugin.rapidshare.error.filetolarge = Diese Datei ist grösser als 200 MB, sie benötigen einen Premium-Account um sie runterzuladen.
 plugin.rapidshare.error.limitexeeded = Das Downloadlimit wurde erreicht.
+plugin.rapidshare.error.serverunavailable = Der Server %s ist momentan nicht verfügbar.
 plugin.rapidshare.tickettime = %s auf Ticket warten
 plugin.serienjunkies.archiveincomplete = Archiv nicht komplett
 plugin.serienjunkies.pageerror = SJ liefert keine Downloadlinks
@@ -778,6 +790,7 @@ plugins.container.exit.error = Container-Fehler: %s
 plugins.container.found = Verarbeite %s Links
 plugins.container.open = Container öffnen
 plugins.decrypt.brazil-series.com1 = Download Format: Nur Avi ohne Untertitel
+plugins.decrypt.charts4you.captcha = Bitte auf den Kreis mit der Lücke klicken!
 plugins.decrypt.cryptitcom.password = Ordner ist Passwortgeschützt. Passwort angeben:
 plugins.decrypt.general.captchacodewrong = Captcha Code falsch
 plugins.decrypt.general.hosterselection = Hoster Auswahl
@@ -785,7 +798,6 @@ plugins.decrypt.gwarezcc.preferdlc = DLC Container bevorzugen
 plugins.decrypt.linkbankeu = Mirror Links überprüfen
 plugins.decrypt.myspacecom0 = Alle Downloads nach 'myspace.com/' laden
 plugins.decrypt.myspacecom1 = Für jeden Musiker einen eigenen Unterordner erstellen
-plugins.decrypt.myspacecom2 = Den myspace-Benutzernamen als Dateinamen-Prefix für alle Downloads benutzen
 plugins.decrypt.rslayer.captchaexpired = Sicherheitscode abgelaufen
 plugins.decrypt.serienjunkies.automaticmirrormanagment = Automatisches Mirror-Management
 plugins.decrypt.serienjunkies.mirrormanagement = Mirror-Management
@@ -794,18 +806,18 @@ plugins.decrypt.serienjunkies.usepremiumlinks = Premiumlinks verwenden, wenn mö
 plugins.decrypt.speedysharecom.password = Passwort eingeben:
 plugins.decrypt.stealthto.captcha = Bitte klicke auf den Kreis mit Lücke
 plugins.error.downloadfailed = Download fehlgeschlagen
+plugins.errors.disconnect = Disconnect?
 plugins.errors.error = Fehler:
+plugins.errors.hosteroffline = Hoster offline?
+plugins.errors.nointernetconn = Keine Internetverbindung?
 plugins.errors.pluginerror = Plugin Fehler. Bitte Support informieren
 plugins.errors.uploadedto.premiumtrafficreached = Traffic Grenze erreicht
 plugins.errors.wrongpassword = Passwort falsch
 plugins.host.dosyakaydet.breakcaptcha = Auf OCR warten
-plugins.host.enterlinkpassword = Bitte Linkpasswort eingeben
-plugins.host.fastload.browsererror = Konnte den Link nicht im Browser öffnen!
-plugins.host.fastload.errors = Browser falsch konfiguriert
-plugins.host.fastload.prepare = Warte auf Linkbestätigung
 plugins.host.meinupload.serverdefect = Service nicht verfügbar
 plugins.host.premium.info.cash = Cash
 plugins.host.premium.info.error = Das %s Plugin unterstützt noch keine Accountinformationen.
+plugins.host.premium.info.expired = Der Account für '%s' ist abgelaufen! Bitte verlängern Sie den Account oder kaufen sie einen neuen!\r\n%s
 plugins.host.premium.info.files = Dateien
 plugins.host.premium.info.notvalid = Die Zugangsdaten für '%s' sind falsch! Bitte Passwort und Benutzername überprüfen!\r\n%s
 plugins.host.premium.info.premiumpoints = PremiumPoints
@@ -821,11 +833,12 @@ plugins.host.rapidshare.errors.811d7f115500de90d1495ef963040930 = Der Server ist
 plugins.host.rapidshare.errors.8da4051e59062d67a39a7e10cc026831 = Sie haben für heute das Limit überschritten.
 plugins.host.rapidshare.errors.bcfe246b0634299062224a73ae50f17e = Download nicht möglich, da die Datei unter dem Verdacht steht illegal zu sein.
 plugins.host.rapidshare.errors.d11f499020a3607ffdf987ce3968c692 = 10 GB Limit erreicht.
+plugins.host.rapidshare.speedtest = Geschwindigkeits Test
+plugins.host.rapidshare.speedtest.link = Rapidshare.com Link eingeben
 plugins.host.server.unavailable = Serverfehler
 plugins.host.sharebaseto.servererror = Service nicht verfügbar
 plugins.host.xup = Passwort falsch
 plugins.hoster.error.agb = AGB nicht akzeptiert
-plugins.hoster.fastload.bypassapi = API Bypass
 plugins.hoster.general.passwordprotectedinput = Die Links sind mit einem Passwort geschützt. Bitte geben Sie das Passwort ein:
 plugins.hoster.passquestion = Link '%s' ist Passwortgeschützt. Passwort eingeben:
 plugins.hoster.premium.status_ok = Account ist OK
@@ -839,7 +852,6 @@ plugins.hoster.uploadedto.chunks = Premium Verbindungen # (>1 verursacht höhere
 plugins.menu.accounts = Accounts
 plugins.menu.configs = Konfiguration
 plugins.menu.enable_premium = Account aktivieren
-plugins.menu.fastload_refresh = Alle Tickets aktualisieren
 plugins.menu.noaccountsyet = Keine Accounts eingerichtet
 plugins.menu.premiuminfo = AccountInfo holen
 plugins.netload.downloadpassword_question = Passwort geschützt. Passwort eingeben:
@@ -925,8 +937,17 @@ plugins.optional.jdunrar.menu.queue.clear = Warteschlange löschen
 plugins.optional.jdunrar.menu.queue.extract = Entpacke %s
 plugins.optional.jdunrar.menu.queue.start = Starte Warteschlange
 plugins.optional.jdunrar.menu.toggle = Aktivieren
+plugins.optional.jdunrar.messages = Der Pfad %s existiert nicht.
 plugins.optional.jdunrar.name = JD-Unrar
 plugins.optional.jdunrar.progress.extractfile = Entpacke %s
+plugins.optional.jdunrar.status.crackingpass = Cracke Passwort
+plugins.optional.jdunrar.status.extractfailed = Entpacken fehlerhaft
+plugins.optional.jdunrar.status.extractfailedcrc = Entpacken fehlerhaft (CRC Fehler)
+plugins.optional.jdunrar.status.extractfailedpass = Entpacken fehlerhaft (Passwort)
+plugins.optional.jdunrar.status.extracting = Entpacken ...
+plugins.optional.jdunrar.status.extractok = Entpacken OK
+plugins.optional.jdunrar.status.openingarchive = Öffne Archiv ...
+plugins.optional.jdunrar.status.passfound = Passwort gefunden
 plugins.optional.langfileeditor.adoptdefaults = Standardwert(e) übernehmen
 plugins.optional.langfileeditor.adoptdefaults.missing = Standardwert(e) für fehlende Einträge übernehmen
 plugins.optional.langfileeditor.changed.message = Language File hat sich geändert! Änderungen abspeichern?
@@ -1021,7 +1042,6 @@ plugins.optional.remotecontrol.stopped = gestoppt.
 plugins.optional.remotecontrol.toggle = RemoteControl starten/beenden
 plugins.optional.streamsharingtool.action.end = Beenden
 plugins.optional.streamsharingtool.action.save.dlc.finished = StreamingShare DLC fertig.
-plugins.optional.streamsharingtool.action.start = StreamSharing Tool starten
 plugins.optional.streamsharingtool.action.validate.linksfound = Link(s) gefunden!
 plugins.optional.streamsharingtool.gui.comment.defaultcomment = StreamingShare-DLC
 plugins.optional.streamsharingtool.gui.comment.question = DLC Kommentar eingeben
@@ -1120,11 +1140,10 @@ system.download.errors.linkisblocked = Datei wird schon von %s geladen
 system.download.triggerfileexists = Wenn eine Datei schon vorhanden ist:
 system.download.triggerfileexists.overwrite = Datei überschreiben
 system.download.triggerfileexists.skip = Link überspringen
-system.update.changelogurl = http://jdownloader.org/changes/index
 system.update.error.message = Installation der folgende Pakete fehlgeschlagen:<hr>%s
 system.update.error.message.infolink = %s v.%s <a href='%s'>INFO</a><br/>
 system.update.message.title = Update zur Version %s
-system.update.showchangelog = Zeige alle Änderungen
+system.update.showchangelogv2 = Was ist neu?
 system.update.success.message = Neue Pakete installiert<hr>%s
 system.update.success.message.infolink = %s v.%s <a href='%s'>INFO</a><br/>
 train.choose.folder = Wählen sie einen Ordner aus
