Polish translation file update.

--- a/trunk/ressourcen/jd/languages/Polski.lng
+++ b/trunk/ressourcen/jd/languages/Polski.lng
@@ -150,6 +150,7 @@ exceptions.browserexception.rangeerror = Błąd ładowania części
 exceptions.browserexception.redirecterror = Nieoczekiwany błąd przy kopiowaniu części: Przekierowanie.
 gui.accountcheck.pluginerror = Wtyczka %s może być wadliwa. Powiadom proszę autorów.
 gui.askname = Podaj imię
+gui.btn_abort = Przerwij
 gui.btn_accept = Przyjęty
 gui.btn_add = Dodaj
 gui.btn_cancel = Anuluj
@@ -985,8 +986,8 @@ gui.table.contextmenu.copypassword = Kopiuj hasło
 gui.table.contextmenu.copypassword_package = Kopiuj hasło
 gui.table.contextmenu.delete = Usuń
 gui.table.contextmenu.deletepackage = Usuń
-gui.table.contextmenu.disable = Wyłącz
-gui.table.contextmenu.disablepackage = Wyłącz
+gui.table.contextmenu.disable = Deaktywuj
+gui.table.contextmenu.disablepackage = Deaktywuj
 gui.table.contextmenu.dlc = Utwórz DLC
 gui.table.contextmenu.dlc_package = Utwórz DLC
 gui.table.contextmenu.downloaddir = Otwórz lokalizację
@@ -1677,6 +1678,7 @@ plugins.optional.premiumcollector.fetchaccounts = Przenoś konta
 plugins.optional.premiumcollector.inserted = Wprowadzono %s kont.
 plugins.optional.premiumcollector.name = Zbieracz kont Premium
 plugins.optional.premiumcollector.onlyvalid = Akceptuj tylko prawidłowe i nie wygasłe konta
+plugins.optional.premiumcollector.onlyvalid2 = Usuń nieprawidłowe i wygasłe konta
 plugins.optional.premiumcollector.overwrite = Automatycznie nadpisuj konta
 plugins.optional.premiumcollector.password = Hasło
 plugins.optional.premiumcollector.username = Nazwa użytkownika
