Polish translation file update.

--- a/trunk/ressourcen/jd/languages/Polski.lng
+++ b/trunk/ressourcen/jd/languages/Polski.lng
@@ -336,6 +336,7 @@ gui.config.gui.custum_browser = Ścieżka do przeglądarki
 gui.config.gui.custum_browser_param = Parametr %url (jeden parametr na linię)
 gui.config.gui.disabledialogs = Wyłącz potwierdzenia
 gui.config.gui.disabletooltipps = Wyłącz podpowiedzi z listy pobrań
+gui.config.gui.doubeclick = Klkiknij dwukrotnie by rozwinąć/zwinąć pakiet
 gui.config.gui.ext = Zaawansowane
 gui.config.gui.extended = Zaawansowane
 gui.config.gui.gui = Połączenia użytkownika
@@ -347,6 +348,7 @@ gui.config.gui.localehelp = Tak, chciałbym JD poprzez poprawienie polonizacji!
 gui.config.gui.look.tab = Ustawienia główne
 gui.config.gui.plaf = Styl (Po zmianie uruchom ponownie)
 gui.config.gui.premiumconfigfilednum = Ilość wyświetlanych pól kont Premium
+gui.config.gui.reg_protocols = Otwieraj pliki ccf/dlc/rdsf za pomocą JDownloadera
 gui.config.gui.showfengshui = Zawsze otwieraj zaawansowaną konfigurację.
 gui.config.gui.showsplash = Pokazuj ekran uruchamiania programu
 gui.config.gui.soundtheme = Schemat dźwięków
@@ -517,7 +519,7 @@ gui.config.showcontaineronloadinfo.helpurl = http://jdownloader.org/wiki/index.p
 gui.config.subpanel.btn_cancel = Anuluj
 gui.config.subpanel.btn_ok = OK
 gui.config.tablables.addons = Menadżer dodatków
-gui.config.tablables.containerplugin = Pakiety
+gui.config.tablables.containerplugin = Ustawienia pojemników
 gui.config.tablables.decryptplugin = Szyfrowanie
 gui.config.tablables.download = Pobieranie/Internet
 gui.config.tablables.eventmanager = Menedżer zdarzeń
@@ -634,8 +636,9 @@ gui.downloadtab.popup.reststatus = Zresetuj stan
 gui.downloadtab.popup.showinfos = Pokaż szczegóły
 gui.downloadtab.popup.up = Przesuń w górę
 gui.droptarget.downloadsadded = Dodane elementy:
+gui.droptarget.grabbed = Złapane:
 gui.droptarget.label = Upuść linki w tym miejscu!
-gui.droptarget.title = Zbieracz linków
+gui.droptarget.title = Łapacz linków
 gui.fengshuiconfig.general.tooltip = <html>Tutaj możesz ustawić ścieżkę pobierania do tłumaczenia
 gui.fengshuiconfig.languages.restartwarning = Musisz zrestartować JDownloadera, aby zmienić język. Czy chcesz zrobić to teraz?
 gui.fengshuiconfig.plugin.host.tooltip = <html>Jeśli posiadasz konto Premium w jakimś serwisie, możesz wpisać swów login<br> i hasło tutaj by móc automatycznie z niego korzystać przy pobieraniu z tego serwisu.
@@ -1732,7 +1735,7 @@ plugins.optional.trayicon.startorstop = Start/Stop
 plugins.optional.trayicon.stopafter = Zatrzymaj po tym pobieraniu
 plugins.optional.trayicon.tooltipp = Aktywna podpowiedź:
 plugins.optional.trayicon.update = Aktualizacja
-plugins.optional.webinterface.connections = Maksymalna ilośc połączeń
+plugins.optional.webinterface.connections = Maksymalna ilość połączeń
 plugins.optional.webinterface.https = Używaj HHTPS
 plugins.optional.webinterface.loginname = Nazwa użytkownika
 plugins.optional.webinterface.loginpass = Hasło
