PL translation file update

--- a/trunk/ressourcen/jd/languages/Polski.lng
+++ b/trunk/ressourcen/jd/languages/Polski.lng
@@ -349,6 +349,7 @@ gui.config.gui.look.tab = Ustawienia główne
 gui.config.gui.plaf = Styl (Po zmianie uruchom ponownie)
 gui.config.gui.premiumconfigfilednum = Ilość wyświetlanych pól kont Premium
 gui.config.gui.reg_protocols = Otwieraj pliki ccf/dlc/rdsf za pomocą JDownloadera
+gui.config.gui.show_speed_graph = Wyświetlaj wykres prędkości pobierania
 gui.config.gui.showfengshui = Zawsze otwieraj zaawansowaną konfigurację.
 gui.config.gui.showsplash = Pokazuj ekran uruchamiania programu
 gui.config.gui.soundtheme = Schemat dźwięków
@@ -1063,6 +1064,7 @@ installer.abortinstallation = Błąd. Użytkownik przerwał instalację.
 installer.downloaddir = Folder pobierania
 installer.error.nowriterights = Błąd. Nie masz uprawnień do zapisu w tym folderze.
 installer.installdir = Katalog docelowy
+installer.refused = Połączenie zostało odrzucone. Wygląda na to, że jakieś oprogramowanie zabezpieczające (np. firewall) blouje JD. Więcej szczegółów: http://jdownloader.org/pl/knowledge/wiki/faq.
 installer.title = JDownloader - Instalacja 
 installer.welcome = Witamy w programie JDownloader. Pobierz brakujące pliki.
 interaction.backup.config = Zapisywanie konfiguracji
@@ -1283,7 +1285,7 @@ modules.reconnect.types.batch = Wsadowe
 modules.reconnect.types.clr = Skrypt CLR
 modules.reconnect.types.extern = Zewnętrzne
 modules.reconnect.types.liveheader = LiveHeader/Curl
-modules.unrar.enabled.instanthelp = http://jdownloader.org/knowledge/wiki/addons/list/jdunrar
+modules.unrar.enabled.instanthelp = http://jdownloader.net/page.php?id=17
 modules.unrar.name = Wypakowywanie RAR
 plugin.optional.jdchat.teamviewer.yourtvdata = Twoje dane Teamviewer:
 plugin.rapidshare.error.accountnotfound = Konto Premium nie zostało odnalezione
@@ -1412,6 +1414,7 @@ plugins.hoster.fastload.bypassapi = Pomijanie API
 plugins.hoster.filefactory.getfileheaderiffilenametoolong1 = Jeśli nazwa jest skrócona, plik może zostać pobrany
 plugins.hoster.filefactory.getfileheaderiffilenametoolong2 = (Wymagane rozpoznawanie kodów Captcha; może zająć chwilę)
 plugins.hoster.general.passwordprotectedinput = Linki są zabezpieczone hasłem. Proszę wprowadzić hasło:
+plugins.hoster.letitbitnet.errors.countryblock = Letitbit nie pozwala na pobieranie tego pliku w twoim kraju.
 plugins.hoster.passquestion = Linki '%s' jest zabezpieczony hasłem. Proszę wprowadzić hasło:
 plugins.hoster.premium.status_ok = Konto prawidłowe.
 plugins.hoster.premiumtab = Ustawienia Premium
